--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,8 @@ yarn-error.log*
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
+/.idea/
+
 
 # AWS User-specific
 .idea/**/aws.xml
