appbar over drawer

--- a/package.json
+++ b/package.json
@@ -13,12 +13,17 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/date-arithmetic": "^4.1.1",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.58",
     "@types/react": "^18.0.18",
+    "@types/react-big-calendar": "^0.38.1",
     "@types/react-dom": "^18.0.6",
+    "date-arithmetic": "^4.1.0",
+    "date-fns": "^2.29.3",
     "eslint": "8.22.0",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.5.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
